--- a/index.html
+++ b/index.html
@@ -2,25 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-    <title>Secret Agent Supply Inc.</title>
+    <link href="reset.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
+
+    <title></title>
   </head>
-  <body>
-    <div class="company">
-      <div class="container">
-        <img src="./resources/logo.png">
-        <span>SECRET AGENT SUPPLY INC.</span>
-      </div>
+  <div class="company">
+    <div class="container">
+      <img src="./resources/logo.png">
+      <span class="title">Secret Agent Supply</span>
     </div>
-      <div class="main-banner">
-        <div class="container">
-          <div class="headline">
-            <h4>NEW ARRIVAL</h4>
-            <h1>SPORT BIKES AND MOTORCYCLES</h1>
-          </div>
+  </div>
+
+  <body>
+    <div class="container">
+      <div class="main">
+        <div class="main-title">
+          <h1 class="new">NEW ARRIVAL<h1>
+          <h4 class="banner">SPORT BIKES AND MOTORCYCLES</h4>
         </div>
       </div>
+    </div>
+    <div class="container">
       <nav>
         <span>Eyewear</span>
         <span>Apparel</span>
@@ -29,41 +32,45 @@
         <span>Classes</span>
         <span>Contact</span>
       </nav>
-      <div class="container">
-        <div class="products">
-          <div class="product">
-            <div class="product-image">
-              <img src="./resources/pen.png">
-            </div>
-            <span class="prodspan">Exploding Pen</span>
+    </div>
+    <div class="container">
+      <div class="products">
+        <div class="product">
+          <div class="product-image">
+            <img src="./resources/pen.png">
           </div>
-          <div class="product watch">
-            <div class="product-image">
-              <img src="./resources/watch.png">
-            </div>
-            <span class="prodspan">Cellular Watch</span>
+          <span class="prodspan">Exploding Pen</span>
+        </div>
+        <div class="product watch">
+          <div class="product-image">
+            <img src="./resources/watch.png">
           </div>
-          <div class="product glasses">
-            <div class="product-image">
-              <img src="./resources/glasses.png">
-            </div>
-            <span class="prodspan">Thermal Glasses</span>
+          <span class="prodspan">Cellular Watch</span>
+        </div>
+        <div class="product glasses">
+          <div class="product-image">
+            <img src="./resources/glasses.png">
           </div>
+          <span class="prodspan">Thermal Glasses</span>
         </div>
       </div>
-      <div class="container">
-        <div class="foot">
-          <div class="info">
-            <div class="location">
-              <span class="spanend">Location</span>
-              <span>-47.346436, 84.32354</span>
-            </div>
-            <div class="hours">
-              <span class="spanend">Hours</span>
-              <span>0800 - 1800</span>
-            </div>
-        </div>
-        </div>
     </div>
+    <div class="container">
+      <div class="footel">
+        <div class="footbox">
+          <span class="label">Location</span>
+          <span class="actual location">-47.346436, 84.32354</span>
+        </div>
+        <div class="footbox">
+          <span class="label">Hours</span>
+          <span class="actual hours">0800 - 1800</span>
+        </div>
+      </div>
+    </div>
+    <footer>
+    <div class="container">
+      <span>Copyright Secret Agent Supply Inc.</span>
+    </div>
+  </footer>
   </body>
 </html>
